updating react photo view

--- a/public/styles/home-style.css
+++ b/public/styles/home-style.css
@@ -202,6 +202,7 @@ body {
     color: var(--text1);
     font-size: 13px;
     margin-top: 10px !important;
+    min-height: 100px;
 }
 
 #home-services-all-cards .service-short-desc .service-description .rev {
