--- a/public/styles/home-style.css
+++ b/public/styles/home-style.css
@@ -175,6 +175,8 @@ body {
 
 #home-services-all-cards .service-image img {
     border-radius: 3px;
+    height: 120px;
+    width: 100%;
 }
 
 #home-services-all-cards .service-short-desc {
